# MPC_steering

./: BUILD.bazel  CMakeLists.txt  mpc_kinematic_bicycle.cpp  mpc_steering.cpp  mpc_steering.hpp  mpc_tracking_err_calc.cpp  mpc_tracking_err_calc.hpp  package.xml
lib/: .clang-format  BUILD.bazel  info
lib/INCLUDE/: Bounds.hpp  Constants.hpp  Constraints.hpp  CyclingManager.hpp  Indexlist.hpp  MessageHandling.hpp  QProblem.hpp  QProblemB.hpp  SubjectTo.hpp  Utils.hpp
lib/SRC/: Bounds.cpp  Constraints.cpp  CyclingManager.cpp  Indexlist.cpp  MessageHandling.cpp  QProblem.cpp  QProblemB.cpp  SubjectTo.cpp  Utils.cpp
output/: controls.csv  info  lateral_offset.csv  reference.csv  states.csv
resource/: waypoints.csv
