<?xml version="1.0"?>
<package format="2">
  <name>mpc_steering</name>
  <version>0.0.0</version>
  <description>The mpc_steering package</description>

  <maintainer email="jiahao@ventitechnologies.com">venti</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>stds_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>stds_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>usbcan_node</depend>
  <depend>pnc_msgs</depend>
  <depend>navigation_msgs</depend>
  <depend>fmutil</depend>
  <depend>transform_util</depend>
  <depend>av_map_msgs</depend>
  <depend>ros_abstraction_layer</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <exec_depend>stds_msgs</exec_depend>

</package>
